--- a/Practice/practice.html
+++ b/Practice/practice.html
@@ -63,6 +63,12 @@
       <button v-on:click="clickHandler">Click!</button>
     </div>
 
+    <div class="staff-info">
+      <li>Name</li>
+      <li>Job</li>
+      <li>comments</li>
+    </div>
+
     <script src="https://unpkg.com/vue@3.1.5"></script>
     <script src="js/practice.js"></script>
   </body>
