study css cycle pic

--- a/Practice/practice.html
+++ b/Practice/practice.html
@@ -81,3 +81,5 @@
     <script src="js/practice.js"></script>
   </body>
 </html>
+
+<div class="frame" style="background: url(staff_pic7.jpeg) center center no-repeat;"></div>
