--- a/Practice/practice.html
+++ b/Practice/practice.html
@@ -83,3 +83,10 @@
 </html>
 
 <div class="frame" style="background: url(staff_pic7.jpeg) center center no-repeat;"></div>
+<div class="frame" style="background: url(1.png) center center no-repeat;"></div>
+<div class="frame" style="background: url(2.png) center center no-repeat;"></div>
+<div class="frame" style="background: url(3.png) center center no-repeat;"></div>
+<div class="frame" style="background: url(4.png) center center no-repeat;"></div>
+<div class="frame" style="background: url(5.png) center center no-repeat;"></div>
+<div class="frame" style="background: url(6.png) center center no-repeat;"></div>
+<div class="frame" style="background: url(7.png) center center no-repeat;"></div>
