--- a/Practice/practice.html
+++ b/Practice/practice.html
@@ -90,3 +90,5 @@
 <div class="frame" style="background: url(5.png) center center no-repeat;"></div>
 <div class="frame" style="background: url(6.png) center center no-repeat;"></div>
 <div class="frame" style="background: url(7.png) center center no-repeat;"></div>
+
+<div class="image"><img src="1.png" height="100" width="100" alt=""></div>  
