--- a/Practice/practice.html
+++ b/Practice/practice.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>vue practice</title>
+    <script src="js/jquery.practice.js"></script>
     <link rel="stylesheet" href="css/practice.css" />
+    
   </head>
 
   <body>
@@ -76,22 +78,21 @@
         </div>
         <div class="pb_staff_list-career"><strong class="pb_staff_list-career-heading">経歴</strong><br>神戸大学医学部保健学科 卒業<br>神戸大学大学院保健学研究科修了　博士（保健学）<br><br>2001年に理学療法士免許取得後、スポーツ整形外科が中心の病院で理学療法士として勤務する傍ら、大学バスケットボール部トレーナーにも従事。<br>その後、神戸大学大学院に進学し、神戸大学医学部附属病院での臨床業務を行いながら、股関節疾患患者の歩行分析や転倒予防に関する研究を行う。<br>学位取得後は、地域におけるかかりつけ理学療法士の存在を目指して、2013年株式会社アールイーコンセプトを設立。<br>現在は、デイサービスや保険外リハビリの現場業務に加えて、神戸大学、兵庫医療大学の非常勤講師として講義も行っている。</div>
       </div>
-
+      <div class="frame" style="background: url(staff_pic7.jpeg) center center no-repeat;"></div>
+      <div class="frame" style="background: url(1.png) center center no-repeat;"></div>
+      <div class="frame" style="background: url(2.png) center center no-repeat;"></div>
+      <div class="frame" style="background: url(3.png) center center no-repeat;"></div>
+      <div class="frame" style="background: url(4.png) center center no-repeat;"></div>
+      <div class="frame" style="background: url(5.png) center center no-repeat;"></div>
+      <div class="frame" style="background: url(6.png) center center no-repeat;"></div>
+      <div class="frame" style="background: url(7.png) center center no-repeat;"></div>
+      
+      <div class="image" id="test"><img src="1.png" height="100" width="100" alt=""></div>
+      <div class="image"><img src="2.png" height="100" width="100" alt=""></div>
+      <div class="image"><img src="3.png" height="100" width="100" alt=""></div>
+      <div class="image"><img src="4.png" height="100" width="100" alt=""></div>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/vue@3.1.5"></script>
     <script src="js/practice.js"></script>
   </body>
 </html>
-
-<div class="frame" style="background: url(staff_pic7.jpeg) center center no-repeat;"></div>
-<div class="frame" style="background: url(1.png) center center no-repeat;"></div>
-<div class="frame" style="background: url(2.png) center center no-repeat;"></div>
-<div class="frame" style="background: url(3.png) center center no-repeat;"></div>
-<div class="frame" style="background: url(4.png) center center no-repeat;"></div>
-<div class="frame" style="background: url(5.png) center center no-repeat;"></div>
-<div class="frame" style="background: url(6.png) center center no-repeat;"></div>
-<div class="frame" style="background: url(7.png) center center no-repeat;"></div>
-
-<div class="image"><img src="1.png" height="100" width="100" alt=""></div>
-<div class="image"><img src="2.png" height="100" width="100" alt=""></div>
-<div class="image"><img src="3.png" height="100" width="100" alt=""></div>
-<div class="image"><img src="4.png" height="100" width="100" alt=""></div>
