--- a/Practice/practice.html
+++ b/Practice/practice.html
@@ -90,7 +90,8 @@
       <div class="image" id="test"><img src="1.png" height="100" width="100" alt=""></div>
       <div class="image"><img src="2.png" height="100" width="100" alt=""></div>
       <div class="image"><img src="3.png" height="100" width="100" alt=""></div>
-      <div class="image"><img src="4.png" height="100" width="100" alt=""></div>
+      <div class="image"　id="accordion"><img src="4.png" height="100" width="100" alt=""></div>
+      
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/vue@3.1.5"></script>
     <script src="js/practice.js"></script>
