--- a/Practice/practice.html
+++ b/Practice/practice.html
@@ -92,6 +92,11 @@
       <div class="image"><img src="3.png" height="100" width="100" alt=""></div>
       <div class="image"　id="accordion"><img src="4.png" height="100" width="100" alt=""></div>
       
+      <dl class="ac">
+        <dt class="ac-parent">メニュー</dt>
+        <dd class="ac-child">メニューの中身</dd>
+      </dl>
+      
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/vue@3.1.5"></script>
     <script src="js/practice.js"></script>
