--- a/Practice/practice.html
+++ b/Practice/practice.html
@@ -60,9 +60,13 @@
       <hello-component></hello-component>
     </div> -->
 
-    <div id="app">
+    <!-- <div id="app">
       <p v-cloak>{{ message }}</p>
       <button v-on:click="clickHandler">Click!</button>
+    </div> -->
+
+    <div id="app">
+      <p>{{ reverse.Message }}</p>
     </div>
 
     <div class="pb_staff_list">
